--- a/examples/vuejs-live-cursors/public/styles.css
+++ b/examples/vuejs-live-cursors/public/styles.css
@@ -5,6 +5,7 @@ html {
 
 body {
   position: relative;
+  overflow: hidden;
   margin: 0;
 }
 
